cmd/notification/k8s/02-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-notification-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/notification
