cmd/notification/k8s/01-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: uhub.service.ucloud.cn/entropypool/notification:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50200
    targetPort: 50200
  - name: grpc
    port: 50201
    targetPort: 50201
  - name: prometheus
    port: 50202
    targetPort: 50202
  selector:
    app: notification
