cmd/notification/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notification-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: notification-npool
    k8s.kuboard.cn/workload: notification-npool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-notification-prefix@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/notification
            backend:
              serviceName: notification
              servicePort: 50200
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-notification-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/notification
